--- a/Healthcare Problem Set - Extra material/Readme
+++ b/Healthcare Problem Set - Extra material/Readme
@@ -1,3 +1,5 @@
+#Healthcare Problem Set - Extra material
+
 In this folder you will find two main files
   1.- APL Healthcare.exe
   2.- APL Healthcare.pdf      Probaliy, this file will be updated a little after the first one.
