Update and rename Readme to README

--- a/Healthcare Problem Set - Extra material/README
+++ b/Healthcare Problem Set - Extra material/README
@@ -1,4 +1,4 @@
-#Healthcare Problem Set - Extra material
+# Healthcare Problem Set - Extra material
 
 In this folder you will find two main files
   1.- APL Healthcare.exe
@@ -11,3 +11,4 @@ why it works.
 The second one, is a document in which all the procedures and logic implemented in the solution are explained and writed in a organized
 way.
 
+If you have any questions, contact me to abchgo@hotmail.com I will be pleased to clarify all your doubt.
